[package]
name = "amaze"
version = "0.1.0"
edition = "2021"

[dependencies]
curve25519-dalek = "3.2"
rand = { version="0.7", features=["std"] }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.3.5"
bincode = "1.3.3"

[[bench]]
name = "franking"
harness = false

[[bench]]
name = "hacky_bench_for_android"
harness = false

[profile.release]
lto = true

[profile.bench]
lto = true
